--- a/public/styles/wizard.css
+++ b/public/styles/wizard.css
@@ -86,6 +86,8 @@
           color: #ffffff;
           text-transform: uppercase;
           font-size: 16px; }
+          .wizard-container .left-container .wizard-form .button-container button.danger {
+            background-color: #FF6464; }
   .wizard-container .right-container {
     background-color: #eeeeee;
     width: 50%;
