--- a/public/styles/wizard.scss
+++ b/public/styles/wizard.scss
@@ -1,5 +1,6 @@
 @import "fonts.css";
 $color-primary: #4471F1;
+$color-danger : #FF6464;
 
 .clear{
   clear:both;
@@ -120,6 +121,9 @@ $color-primary: #4471F1;
                     color: #ffffff;
                     text-transform: uppercase;
                     font-size: 16px;
+                    &.danger{
+                        background-color: $color-danger;
+                    }
                 }
             }
         }
