--- a/public/styles/wizard.css
+++ b/public/styles/wizard.css
@@ -10,7 +10,8 @@
     background-color: #ffffff;
     width: 50%;
     float: left;
-    min-height: 100vh; }
+    min-height: 100vh;
+    padding-bottom: 40px; }
     .wizard-container .left-container b {
       font-family: SegoeBold; }
     .wizard-container .left-container .container {
@@ -74,6 +75,51 @@
           border-radius: 5px;
           border: 1px solid #ededed;
           outline: none; }
+        .wizard-container .left-container .wizard-form .form textarea {
+          width: 100%;
+          padding: 15px 20px;
+          border-radius: 5px;
+          border: 1px solid #ededed;
+          outline: none;
+          resize: none; }
+      .wizard-container .left-container .wizard-form .device-type-card {
+        width: 100%;
+        border: 1px solid #ededed;
+        border-radius: 10px;
+        padding: 10px 20px;
+        display: table;
+        margin-top: 20px; }
+        .wizard-container .left-container .wizard-form .device-type-card .radiobox-container {
+          display: table-cell;
+          width: 10%;
+          vertical-align: middle; }
+        .wizard-container .left-container .wizard-form .device-type-card .detail-container {
+          display: table-cell;
+          width: 60%;
+          vertical-align: middle;
+          padding-right: 80px; }
+          .wizard-container .left-container .wizard-form .device-type-card .detail-container h1 {
+            font-family: SegoeBold;
+            font-size: 14px;
+            margin: 5px 0;
+            color: #2D2C2C; }
+          .wizard-container .left-container .wizard-form .device-type-card .detail-container p {
+            font-size: 11px;
+            color: #B9BBBC; }
+        .wizard-container .left-container .wizard-form .device-type-card .icon-container {
+          display: table-cell;
+          vertical-align: middle;
+          width: 30%;
+          border-left: 1px solid #ededed;
+          padding-right: 20px; }
+          .wizard-container .left-container .wizard-form .device-type-card .icon-container .image-container {
+            width: 50px;
+            text-align: center;
+            margin: auto; }
+            .wizard-container .left-container .wizard-form .device-type-card .icon-container .image-container img {
+              max-width: 50px;
+              max-height: 50px;
+              height: 100%; }
       .wizard-container .left-container .wizard-form .button-container {
         margin-top: 40px; }
         .wizard-container .left-container .wizard-form .button-container button {
@@ -88,6 +134,32 @@
           font-size: 16px; }
           .wizard-container .left-container .wizard-form .button-container button.danger {
             background-color: #FF6464; }
+    .wizard-container .left-container .card-container {
+      text-align: center; }
+      .wizard-container .left-container .card-container .wizard-card {
+        display: inline-block;
+        vertical-align: top;
+        width: 200px;
+        height: auto;
+        border-radius: 5px;
+        border: 1px solid #ededed;
+        margin: 5px;
+        padding: 10px; }
+        .wizard-container .left-container .card-container .wizard-card .image {
+          width: 100%;
+          height: 180px;
+          background-size: contain;
+          background-repeat: no-repeat;
+          background-position: center; }
+        .wizard-container .left-container .card-container .wizard-card .heading {
+          text-align: center;
+          font-size: 16px;
+          margin: 0;
+          width: 100%;
+          height: 44px;
+          margin-bottom: 5px;
+          font-family: SegoeRegular;
+          font-weight: bold; }
   .wizard-container .right-container {
     background-color: #eeeeee;
     width: 50%;
