--- a/public/styles/wizard.css
+++ b/public/styles/wizard.css
@@ -64,17 +64,42 @@
       padding: 0 10px; }
       .wizard-container .left-container .wizard-form .form {
         margin-top: 20px; }
-        .wizard-container .left-container .wizard-form .form label {
+        .wizard-container .left-container .wizard-form .form .form-heading {
           display: block;
-          font-size: 16px;
+          font-size: 18px;
           margin-bottom: 10px;
           color: #505050; }
-        .wizard-container .left-container .wizard-form .form input {
+        .wizard-container .left-container .wizard-form .form .form-subheading {
+          display: block;
+          font-size: 15px;
+          color: #95989A; }
+        .wizard-container .left-container .wizard-form .form input[type="text"], .wizard-container .left-container .wizard-form .form input[type="email"] {
           width: 100%;
           padding: 15px 20px;
           border-radius: 5px;
           border: 1px solid #ededed;
           outline: none; }
+        .wizard-container .left-container .wizard-form .form input[type="radio"] {
+          -webkit-appearance: none;
+          appearance: none;
+          width: 18px;
+          height: 18px;
+          border: 1px solid #DBDBDB;
+          border-radius: 50%;
+          background-color: #ffffff;
+          outline: 0;
+          vertical-align: top; }
+        .wizard-container .left-container .wizard-form .form input[type="radio"]:checked {
+          background-color: #4471F1;
+          border: 3px solid #DBDBDB; }
+        .wizard-container .left-container .wizard-form .form .radio-label {
+          font-size: 18px;
+          color: #5F5F5F;
+          font-family: SegoeExtraLight;
+          margin-right: 20px;
+          vertical-align: middle; }
+          .wizard-container .left-container .wizard-form .form .radio-label input {
+            margin-right: 5px; }
         .wizard-container .left-container .wizard-form .form textarea {
           width: 100%;
           padding: 15px 20px;
@@ -82,6 +107,28 @@
           border: 1px solid #ededed;
           outline: none;
           resize: none; }
+        .wizard-container .left-container .wizard-form .form .slider-container .slider-label {
+          font-size: 16px;
+          color: #505050;
+          font-family: SegoeExtraLight;
+          width: 65px;
+          display: inline-block; }
+        .wizard-container .left-container .wizard-form .form .slider-container .slider {
+          display: inline-block;
+          max-width: 300px;
+          width: calc(100% - 150px);
+          margin-right: 20px;
+          vertical-align: middle; }
+        .wizard-container .left-container .wizard-form .form .slider-container .ui-slider-horizontal .ui-slider-range {
+          background-color: #4C4C4D; }
+        .wizard-container .left-container .wizard-form .form .slider-container .ui-slider .ui-slider-handle {
+          border-radius: 50%;
+          background-color: #4471F1;
+          border: none;
+          outline: none;
+          top: -8px; }
+        .wizard-container .left-container .wizard-form .form .slider-container .ui-slider-horizontal {
+          height: 3px; }
       .wizard-container .left-container .wizard-form .device-type-card {
         width: 100%;
         border: 1px solid #ededed;
