--- a/public/styles/wizard.css
+++ b/public/styles/wizard.css
@@ -73,7 +73,8 @@
           display: block;
           font-size: 15px;
           color: #95989A; }
-        .wizard-container .left-container .wizard-form .form input[type="text"], .wizard-container .left-container .wizard-form .form input[type="email"] {
+        .wizard-container .left-container .wizard-form .form input[type="email"],
+        .wizard-container .left-container .wizard-form .form input[type="text"] {
           width: 100%;
           padding: 15px 20px;
           border-radius: 5px;
@@ -135,7 +136,8 @@
         border-radius: 10px;
         padding: 10px 20px;
         display: table;
-        margin-top: 20px; }
+        margin-top: 20px;
+        cursor: pointer; }
         .wizard-container .left-container .wizard-form .device-type-card .radiobox-container {
           display: table-cell;
           width: 10%;
@@ -190,8 +192,10 @@
         height: auto;
         border-radius: 5px;
         border: 1px solid #ededed;
+        background-color: #ffffff;
         margin: 5px;
-        padding: 10px; }
+        padding: 10px;
+        cursor: pointer; }
         .wizard-container .left-container .card-container .wizard-card .image {
           width: 100%;
           height: 180px;
@@ -207,6 +211,10 @@
           margin-bottom: 5px;
           font-family: SegoeRegular;
           font-weight: bold; }
+        .wizard-container .left-container .card-container .wizard-card.active {
+          background-color: #f5f5f5;
+          border: 1px solid #999999;
+          box-shadow: 1px 1px 5px rgba(33, 33, 33, 0.3); }
   .wizard-container .right-container {
     background-color: #eeeeee;
     width: 50%;
