--- a/public/styles/wizard.scss
+++ b/public/styles/wizard.scss
@@ -107,7 +107,8 @@ $color-danger: #FF6464;
                     color: #95989A;
                 }
 
-                input[type="text"],input[type="email"] {
+                input[type="email"],
+                input[type="text"] {
                     width: 100%;
                     padding: 15px 20px;
                     border-radius: 5px;
@@ -195,6 +196,7 @@ $color-danger: #FF6464;
                 padding: 10px 20px;
                 display: table;
                 margin-top: 20px;
+                cursor: pointer;
 
                 .radiobox-container {
                     display: table-cell;
@@ -273,8 +275,10 @@ $color-danger: #FF6464;
                 height: auto;
                 border-radius: 5px;
                 border: 1px solid #ededed;
+                background-color: #ffffff;
                 margin: 5px;
                 padding: 10px;
+                cursor: pointer;
 
                 .image {
                     width: 100%;
@@ -293,6 +297,12 @@ $color-danger: #FF6464;
                     margin-bottom: 5px;
                     font-family: SegoeRegular;
                     font-weight: bold;
+                }
+
+                &.active{
+                    background-color: #f5f5f5;
+                    border: 1px solid #999999;
+                    box-shadow: 1px 1px 5px rgba(33,33,33,0.3);
                 }
             }
         }
