--- a/public/styles/wizard.css
+++ b/public/styles/wizard.css
@@ -23,7 +23,6 @@
       font-weight: 100;
       font-size: 42px;
       text-align: center;
-      max-width: 400px;
       margin: 40px auto auto;
       letter-spacing: -2px;
       line-height: 45px; }
@@ -33,7 +32,6 @@
       font-weight: 100;
       font-size: 16px;
       text-align: center;
-      max-width: 250px;
       margin: 30px auto auto;
       letter-spacing: -0.2px; }
     .wizard-container .left-container .wizard-steps {
@@ -183,6 +181,34 @@
           font-size: 16px; }
           .wizard-container .left-container .wizard-form .button-container button.danger {
             background-color: #FF6464; }
+      .wizard-container .left-container .wizard-form .login-button-container {
+        margin-top: 30px; }
+        .wizard-container .left-container .wizard-form .login-button-container .facebook-button {
+          padding: 15px;
+          background: #4471F1;
+          font-family: SegoeExtraLight;
+          font-weight: 100;
+          outline: none;
+          border: none;
+          border-radius: 5px;
+          color: #ffffff;
+          font-size: 16px;
+          margin-right: 20px;
+          margin-top: 20px; }
+          .wizard-container .left-container .wizard-form .login-button-container .facebook-button img {
+            height: 20px;
+            margin-right: 30px; }
+        .wizard-container .left-container .wizard-form .login-button-container .register-button {
+          padding: 15px 25px;
+          margin-top: 20px;
+          background: #ffffff;
+          border: 1px solid #ededed;
+          font-family: SegoeRegular;
+          outline: none;
+          border-radius: 5px;
+          color: #333333;
+          font-size: 16px;
+          margin-left: 20px; }
     .wizard-container .left-container .card-container {
       text-align: center; }
       .wizard-container .left-container .card-container .wizard-card {
@@ -227,6 +253,11 @@
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
-      max-width: 100%; }
+      max-width: 90%;
+      max-height: 90%; }
+  .wizard-container.freelancer .title {
+    max-width: initial; }
+  .wizard-container.freelancer .sub-title {
+    max-width: initial; }
 
 /*# sourceMappingURL=wizard.css.map */
