--- a/public/styles/wizard.scss
+++ b/public/styles/wizard.scss
@@ -33,7 +33,6 @@ $color-danger: #FF6464;
             font-weight: 100;
             font-size: 42px;
             text-align: center;
-            max-width: 400px;
             margin: 40px auto auto;
             letter-spacing: -2px;
             line-height: 45px;
@@ -45,7 +44,6 @@ $color-danger: #FF6464;
             font-weight: 100;
             font-size: 16px;
             text-align: center;
-            max-width: 250px;
             margin: 30px auto auto;
             letter-spacing: -0.2px;
         }
@@ -263,6 +261,41 @@ $color-danger: #FF6464;
                     }
                 }
             }
+
+            .login-button-container {
+                margin-top: 30px;
+                .facebook-button {
+                    padding: 15px;
+                    background: $color-primary;
+                    font-family: SegoeExtraLight;
+                    font-weight: 100;
+                    outline: none;
+                    border: none;
+                    border-radius: 5px;
+                    color: #ffffff;
+                    font-size: 16px;
+                    margin-right: 20px;
+                    margin-top: 20px;
+
+                    img {
+                        height: 20px;
+                        margin-right: 30px;
+                    }
+                }
+
+                .register-button {
+                    padding: 15px 25px;
+                    margin-top: 20px;
+                    background: #ffffff;
+                    border: 1px solid #ededed;
+                    font-family: SegoeRegular;
+                    outline: none;
+                    border-radius: 5px;
+                    color: #333333;
+                    font-size: 16px;
+                    margin-left: 20px;
+                }
+            }
         }
 
         .card-container {
@@ -299,7 +332,7 @@ $color-danger: #FF6464;
                     font-weight: bold;
                 }
 
-                &.active{
+                &.active {
                     background-color: #f5f5f5;
                     border: 1px solid #999999;
                     box-shadow: 1px 1px 5px rgba(33,33,33,0.3);
@@ -321,7 +354,18 @@ $color-danger: #FF6464;
             left: 50%;
             top: 50%;
             transform: translate(-50%,-50%);
-            max-width: 100%;
+            max-width: 90%;
+            max-height: 90%;
+        }
+    }
+
+    &.freelancer {
+        .title {
+            max-width: initial;
+        }
+
+        .sub-title {
+            max-width: initial;
         }
     }
 }
