--- a/public/styles/wizard.css
+++ b/public/styles/wizard.css
@@ -106,6 +106,21 @@
           border: 1px solid #ededed;
           outline: none;
           resize: none; }
+        .wizard-container .left-container .wizard-form .form .select2-container {
+          width: 100% !important; }
+          .wizard-container .left-container .wizard-form .form .select2-container .select2-selection {
+            min-height: 52px;
+            border: 1px solid #ededed;
+            padding: 10px;
+            border-radius: 5px; }
+          .wizard-container .left-container .wizard-form .form .select2-container .select2-selection__arrow {
+            min-height: 50px; }
+          .wizard-container .left-container .wizard-form .form .select2-container .select2-selection__choice {
+            background-color: #E3E3EB;
+            border-radius: 50px;
+            padding: 2px 10px; }
+          .wizard-container .left-container .wizard-form .form .select2-container .select2-search__field {
+            width: 100% !important; }
         .wizard-container .left-container .wizard-form .form .slider-container .slider-label {
           font-size: 16px;
           color: #505050;
@@ -209,6 +224,23 @@
           color: #333333;
           font-size: 16px;
           margin-left: 20px; }
+      .wizard-container .left-container .wizard-form .image-upload-button {
+        padding: 5px 15px;
+        margin-top: 20px;
+        background: #F18944;
+        border: none;
+        font-family: SegoeRegular;
+        outline: none;
+        border-radius: 5px;
+        color: #ffffff;
+        font-size: 13px; }
+      .wizard-container .left-container .wizard-form .avatar-container {
+        width: 120px;
+        height: 120px;
+        border-radius: 15px;
+        margin: 15px auto;
+        background-size: contain;
+        box-shadow: 1px 1px 5px rgba(33, 33, 33, 0.3); }
     .wizard-container .left-container .card-container {
       text-align: center; }
       .wizard-container .left-container .card-container .wizard-card {
@@ -259,5 +291,23 @@
     max-width: initial; }
   .wizard-container.freelancer .sub-title {
     max-width: initial; }
+
+@media only screen and (max-width: 1280px) {
+  .wizard-container .left-container .container {
+    padding: 0 40px; } }
+@media only screen and (max-width: 991px) {
+  .wizard-container .left-container .container .title {
+    font-size: 32px; }
+  .wizard-container .left-container .container .sub-title {
+    font-size: 14px; } }
+@media only screen and (max-width: 768px) {
+  .wizard-container .left-container {
+    width: 100%; }
+    .wizard-container .left-container .container .title {
+      font-size: 32px; }
+    .wizard-container .left-container .container .sub-title {
+      font-size: 14px; }
+  .wizard-container .right-container {
+    display: none; } }
 
 /*# sourceMappingURL=wizard.css.map */
