--- a/public/styles/wizard.scss
+++ b/public/styles/wizard.scss
@@ -1,6 +1,7 @@
 @import "fonts.css";
 $color-primary: #4471F1;
 $color-danger: #FF6464;
+$color-warning: #F18944;
 
 .clear {
     clear: both;
@@ -152,6 +153,31 @@ $color-danger: #FF6464;
                     resize: none;
                 }
 
+                .select2-container {
+                    width: 100% !important;
+
+                    .select2-selection {
+                        min-height: 52px;
+                        border: 1px solid #ededed;
+                        padding: 10px;
+                        border-radius: 5px;
+                    }
+
+                    .select2-selection__arrow {
+                        min-height: 50px;
+                    }
+
+                    .select2-selection__choice {
+                        background-color: #E3E3EB;
+                        border-radius: 50px;
+                        padding: 2px 10px;
+                    }
+
+                    .select2-search__field {
+                        width: 100% !important;
+                    }
+                }
+
                 .slider-container {
                     .slider-label {
                         font-size: 16px;
@@ -264,6 +290,7 @@ $color-danger: #FF6464;
 
             .login-button-container {
                 margin-top: 30px;
+
                 .facebook-button {
                     padding: 15px;
                     background: $color-primary;
@@ -295,6 +322,27 @@ $color-danger: #FF6464;
                     font-size: 16px;
                     margin-left: 20px;
                 }
+            }
+
+            .image-upload-button {
+                padding: 5px 15px;
+                margin-top: 20px;
+                background: $color-warning;
+                border: none;
+                font-family: SegoeRegular;
+                outline: none;
+                border-radius: 5px;
+                color: #ffffff;
+                font-size: 13px;
+            }
+
+            .avatar-container {
+                width: 120px;
+                height: 120px;
+                border-radius: 15px;
+                margin: 15px auto;
+                background-size: contain;
+                box-shadow: 1px 1px 5px rgba(33,33,33,0.3);
             }
         }
 
@@ -366,6 +414,47 @@ $color-danger: #FF6464;
 
         .sub-title {
             max-width: initial;
+        }
+    }
+}
+@media only screen and (max-width: 1280px) {
+    .wizard-container {
+        .left-container {
+            .container {
+                padding: 0 40px;
+            }
+        }
+    }
+}
+@media only screen and (max-width: 991px) {
+    .wizard-container {
+        .left-container {
+            .container {
+                .title{
+                    font-size: 32px;
+                }
+                .sub-title{
+                    font-size: 14px;
+                }
+            }
+        }
+    }
+}
+@media only screen and (max-width: 768px) {
+    .wizard-container {
+        .left-container {
+            width: 100%;
+            .container {
+                .title{
+                    font-size: 32px;
+                }
+                .sub-title{
+                    font-size: 14px;
+                }
+            }
+        }
+        .right-container{
+          display: none;
         }
     }
 }
