connected buttons with routes

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -168,7 +168,7 @@ body {
     margin-top: 30px;
     font-size: 1.4em;
 }
-.rowCTA .enterCTA {
+.rowCTA .btn {
     border-radius: 2px;
     background-color: #249dcb;
     border-color: #249dcb;
