Finished onboarding UI

--- a/public/styles/wizard.css
+++ b/public/styles/wizard.css
@@ -72,6 +72,7 @@
           font-size: 15px;
           color: #95989A; }
         .wizard-container .left-container .wizard-form .form input[type="email"],
+        .wizard-container .left-container .wizard-form .form input[type="password"],
         .wizard-container .left-container .wizard-form .form input[type="text"] {
           width: 100%;
           padding: 15px 20px;
