--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -3,7 +3,7 @@
 
 html,
 body {
-    height: 100%;
+    border: 1px solid red;
 }
 .container {
     width: 85%!important;
@@ -57,9 +57,6 @@ padding-right: 20px;
     color: #444444;
     font-weight: normal!important;
     font-size: 4em;
-    -webkit-animation-delay: 0.5s!important;
-    -moz-animation-delay: 0.5s!important;
-    animation-delay: 0.5s!important;
     font-family: SegoeExtraLight;
 }
 .rowHeader h1 strong {
@@ -70,9 +67,6 @@ font-family: SegoeBold;
     color: #999999;
     font-size: 1.2em;
     margin-top: 20px;
-    -webkit-animation-delay: 0.8s!important;
-    -moz-animation-delay: 0.8s!important;
-    animation-delay: 0.8s!important;
     font-family: SegoeRegular;
 }
 .rowHeader p strong {
@@ -125,8 +119,10 @@ font-family: SegoeBold;
 /* Projects */
 
 .rowProjects{
+      display: block;
+      overflow: hidden;
+      height: auto;
       padding-bottom: 100px;
-      width: 100%;
 }
 .rowProjects h4 {
     font-size: 3.6em;
