button sound issue

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -202,6 +202,12 @@ font-family: SegoeBold;
     padding-top: 80px;
     padding-bottom: 80px;
 }
+.onlyMobile{
+  display: none;
+}
+.onlyDesktop{
+  display: block;
+}
 .aboutJavascript img {
     float: left;
 }
@@ -345,9 +351,8 @@ font-family: SegoeBold;
     overflow: hidden;
     margin-top: 100px;
     padding: 0;
-
     background-image: url("../../public/img/homeAssets/feedbackBg2.png");
-    background-position: 0;
+    background-position: center top;
     background-size: cover;
     padding-bottom: 150px;
 }
@@ -432,11 +437,12 @@ font-family: SegoeBold;
     margin-top: 0;
     padding-right: 15px;
 }
-.rowTech li:nth-child(2n+2) {
+.rowTech li:nth-child(odd) {
     padding-left: 15px;
     float: right;
     padding-right: 0;
 }
+
 .techCardInner {
     border: 1px solid #dedfe0;
     border-radius: 10px;
@@ -824,6 +830,12 @@ font-size: 2.4em;
   padding-left: 20px;
   padding-right:20px;
 }
+.onlyMobile{
+  display: block!important;
+}
+.onlyDesktop{
+  display: none!important;
+}
 .aboutAppDev-img, .aboutWebDesign-img, .aboutJavascript-img{
   display: block;
   overflow: hidden;
@@ -1121,4 +1133,16 @@ float: none;
   padding-left: 10px!important;
   padding-right: 10px!important;
 }
+}
+
+/* Scale Animation */
+.zoomScale{
+  -webkit-transition: all 300ms ease-in;
+   -webkit-transform: scale(15);
+   -ms-transition: all 300ms ease-in;
+   -ms-transform: scale(15);
+   -moz-transition: all 300ms ease-in;
+   -moz-transform: scale(15);
+   transition: all 300ms ease-in;
+   transform: scale(15);
 }
