--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1137,12 +1137,27 @@ float: none;
 
 /* Scale Animation */
 .zoomScale{
-  -webkit-transition: all 300ms ease-in;
+  -webkit-transition: all 500ms ease-in;
    -webkit-transform: scale(15);
-   -ms-transition: all 300ms ease-in;
+   -ms-transition: all 500ms ease-in;
    -ms-transform: scale(15);
-   -moz-transition: all 300ms ease-in;
+   -moz-transition: all 500ms ease-in;
    -moz-transform: scale(15);
-   transition: all 300ms ease-in;
+   transition: all 500ms ease-in;
    transform: scale(15);
+}
+
+.example-appear {
+  opacity: 0;
+   transform:   translate(-450px,0);
+   transform: translate3d(-450px,0,0);
+}
+
+.example-appear.example-appear-active {
+      opacity: 1;
+      transform:   translate(0,0);
+      transform: translate3d(0,0,0);
+      transition-property: transform, opacity;
+      transition-duration: 500ms;
+      transition-timing-function: cubic-bezier(0.175, 0.665, 0.320, 1), linear;
 }
