--- a/public/styles/wizard.css
+++ b/public/styles/wizard.css
@@ -332,7 +332,7 @@
   /* IE 10+, Fx 29+ */ }
 
   .select2-container--default .select2-results__option[aria-selected=true]{
-    display: none;
+    display: none!important;
   }
 
 @media only screen and (max-width: 1280px) {
