--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -44,6 +44,9 @@ padding-right: 20px;
     color: #444444;
     font-family: SegoeBold;
 }
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover{
+  background-color:transparent!important;
+}
 /* Header - Intro */
 
 .headerIntro {
