updated projects and team

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -183,7 +183,12 @@ font-family: SegoeBold;
 .projectWekanTxt h5{
     width:100%!important;
 }
-
+.projectMoonly{
+  margin-top:-60px;
+}
+.projectMoonlyTxt{
+  margin-top:140px;
+}
 
 /* About */
 
