--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -140,6 +140,23 @@ font-family: SegoeBold;
     margin-top:15px;
     margin-bottom:50px;
 }
+
+.rowProjects .visitSite{
+  border: 2px solid #ececec;
+  border-radius: 25px;
+  padding: 10px 20px;
+  font-size: 16px;
+  color: #444444;
+  text-decoration: none;
+  float: left;
+  margin-bottom: 40px;
+}
+
+.rowProjects .visitSite:hover{
+  -webkit-box-shadow: 3px 5px 16px 0px rgba(236, 236, 236, 1);
+  -moz-box-shadow: 3px 5px 16px 0px rgba(236, 236, 236, 1);
+  box-shadow: 3px 5px 16px 0px rgba(236, 236, 236, 1)
+}
 .rowProjects ul {
     padding: 0;
     position: relative;
@@ -162,7 +179,6 @@ font-family: SegoeBold;
   margin-left: -100px
 }
 .projectWireflow h4{
-  float: left;
   margin-right: 30px;
 }
 .projectWireflow h5{
@@ -560,6 +576,7 @@ padding-top: 30px;
 .socialCardInner img {
     margin: 40px auto;
     width: 60%;
+    border-radius:50%;
 }
 .instaUsername {
     color: #2d2c2c;
